GPC/tests/examples/fail/ifelse.gpc

void GPRM::Test::ifelse() {

    if (true) {
        int i = 4;
    } else {
        return j;
    }

}
